widget: fixed bottom-right corner in collapsed bubble state

--- a/assets/widgetCss.css
+++ b/assets/widgetCss.css
@@ -260,6 +260,10 @@
     overflow: auto;
 }
 
+#remotestorage-widget .bubble.hidden {
+    padding-bottom: 2px;
+    border-radius: 5px 15px 15px 5px;
+}
 
 .bubble.hidden .bubble-expandable {
     display: none;
